// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildDocuments > Reads and build the documents by pattern 1`] = `
[
  {
    "content": "mutation initState {
  initState
}",
    "filename": "mutation.initState.graphql",
  },
  {
    "content": "query testClientOptions($path: String!) {
  testClientOptions(path: $path) {
    language
  }
}",
    "filename": "query.testClientOptions.graphql",
  },
  {
    "content": "query getCurrentTime {
  time: getCurrentTime
}",
    "filename": "query.getCurrentTime.graphql",
  },
  {
    "content": "query fetchOptions {
  testFetchOptions {
    headerClient
    headerServer
  }
}",
    "filename": "query.fetchOptions.graphql",
  },
  {
    "content": "query fetchOptionsComposable {
  headerValueFromComposable: getRequestHeader(
    name: "x-nuxt-header-client-from-composable"
  )
  headerValueFromPlugin: getRequestHeader(name: "x-nuxt-header-client")
}",
    "filename": "query.fetchOptionsComposable.graphql",
  },
  {
    "content": "query queryOne {
  one: users {
    ...user
  }
}

query queryTwo {
  two: users {
    ...user
  }
}

fragment foobarQuery on Query {
  foobar: users {
    id
    ...foobarUser
  }
}

fragment foobarUser on User {
  firstName
}
fragment user on User {
  id
  firstName
  lastName
  email
  description
  dateOfBirth
}
fragment foobarUser on User {
  firstName
}",
    "filename": "multipleQueries.graphql",
  },
  {
    "content": "mutation deleteUser($id: Int!) {
  deleteUser(id: $id)
}",
    "filename": "mutation.deleteUser.graphql",
  },
  {
    "content": "mutation triggerError {
  triggerError
}",
    "filename": "mutation.triggerError.graphql",
  },
  {
    "content": "query getError {
  getError
}",
    "filename": "query.getError.graphql",
  },
  {
    "content": "query simulateEndpointDown {
  testFetchOptions {
    headerClient
    headerServer
  }
}",
    "filename": "query.simulateEndpointDown.graphql",
  },
  {
    "content": "mutation testFormSubmit($input: FormSubmissionInput!) {
  submitForm(input: $input)
}",
    "filename": "mutation.testFormSubmit.graphql",
  },
  {
    "content": "mutation testUpload($file: Upload!) {
  uploadFile(file: $file)
}",
    "filename": "mutation.testUpload.graphql",
  },
  {
    "content": "query getSubmissions {
  getSubmissions {
    ...formSubmission
  }
}

fragment formSubmission on FormSubmission {
  id
  firstName
  lastName
  documents {
    name
    file {
      name
      id
      content
    }
  }
}
fragment formSubmission on FormSubmission {
  id
  firstName
  lastName
  documents {
    name
    file {
      name
      id
      content
    }
  }
}",
    "filename": "query.getSubmissions.graphql",
  },
  {
    "content": "query foobar {
  users {
    ...user
  }
}
fragment user on User {
  id
  firstName
  lastName
  email
  description
  dateOfBirth
}",
    "filename": "test.graphql",
  },
  {
    "content": "mutation addUser($user: UserData!) {
  createUser(user: $user) {
    ...user
  }
}
fragment user on User {
  id
  firstName
  lastName
  email
  description
  dateOfBirth
}",
    "filename": "mutation.addUser.graphql",
  },
  {
    "content": "query userById($id: ID!) {
  userById(id: $id) {
    ...user
  }
}
fragment user on User {
  id
  firstName
  lastName
  email
  description
  dateOfBirth
}",
    "filename": "query.user.graphql",
  },
  {
    "content": "fragment user on User {
  id
  firstName
  lastName
  email
  description
  dateOfBirth
}",
    "filename": "user.fragment.graphql",
  },
  {
    "content": "query users {
  users {
    ...user
  }
}
fragment user on User {
  id
  firstName
  lastName
  email
  description
  dateOfBirth
}",
    "filename": "userList.graphql",
  },
  {
    "content": "fragment depthOneQuery on Query {
  one: users {
    ...depthOneUser
  }
}
fragment depthOneUser on User {
  firstName
  friends {
    ...depthTwoUser
  }
}
fragment depthTwoUser on User {
  firstName
}
fragment depthTwoUser on User {
  firstName
}",
    "filename": "fragment.depthOne.graphql",
  },
  {
    "content": "fragment depthOneUser on User {
  firstName
  friends {
    ...depthTwoUser
  }
}
fragment depthTwoUser on User {
  firstName
}",
    "filename": "fragment.depthOneUser.graphql",
  },
  {
    "content": "fragment depthTwoUser on User {
  firstName
}",
    "filename": "fragment.depthTwoUser.graphql",
  },
  {
    "content": "query highDepthOne {
  ...depthOneQuery
  one: users {
    ...depthOneUser
  }
}
fragment depthOneQuery on Query {
  one: users {
    ...depthOneUser
  }
}
fragment depthOneUser on User {
  firstName
  friends {
    ...depthTwoUser
  }
}
fragment depthTwoUser on User {
  firstName
}
fragment depthTwoUser on User {
  firstName
}",
    "filename": "query.highDepthFragments.graphql",
  },
]
`;

exports[`buildDocuments > Reads and builds the documents from nuxt.config.ts 1`] = `
[
  {
    "content": "mutation initState {
  initState
}",
    "filename": "/run/media/dulnan/Storage/development/nuxt-graphql-middleware/playground/app/layouts/mutation.initState.graphql",
  },
  {
    "content": "query testClientOptions($path: String!) {
  testClientOptions(path: $path) {
    language
  }
}",
    "filename": "/run/media/dulnan/Storage/development/nuxt-graphql-middleware/playground/app/pages/[lang]/query.testClientOptions.graphql",
  },
  {
    "content": "query getCurrentTime {
  time: getCurrentTime
}",
    "filename": "/run/media/dulnan/Storage/development/nuxt-graphql-middleware/playground/app/pages/caching/query.getCurrentTime.graphql",
  },
  {
    "content": "query fetchOptions {
  testFetchOptions {
    headerClient
    headerServer
  }
}",
    "filename": "/run/media/dulnan/Storage/development/nuxt-graphql-middleware/playground/app/pages/fetch-options/query.fetchOptions.graphql",
  },
  {
    "content": "query fetchOptionsComposable {
  headerValueFromComposable: getRequestHeader(
    name: "x-nuxt-header-client-from-composable"
  )
  headerValueFromPlugin: getRequestHeader(name: "x-nuxt-header-client")
}",
    "filename": "/run/media/dulnan/Storage/development/nuxt-graphql-middleware/playground/app/pages/fetch-options/query.fetchOptionsComposable.graphql",
  },
  {
    "content": "query queryOne {
  one: users {
    ...user
  }
}

query queryTwo {
  two: users {
    ...user
  }
}

fragment foobarQuery on Query {
  foobar: users {
    id
    ...foobarUser
  }
}

fragment foobarUser on User {
  firstName
}
fragment user on User {
  id
  firstName
  lastName
  email
  description
  dateOfBirth
}
fragment foobarUser on User {
  firstName
}",
    "filename": "/run/media/dulnan/Storage/development/nuxt-graphql-middleware/playground/app/pages/multipleQueries.graphql",
  },
  {
    "content": "mutation deleteUser($id: Int!) {
  deleteUser(id: $id)
}",
    "filename": "/run/media/dulnan/Storage/development/nuxt-graphql-middleware/playground/app/pages/mutation.deleteUser.graphql",
  },
  {
    "content": "mutation triggerError {
  triggerError
}",
    "filename": "/run/media/dulnan/Storage/development/nuxt-graphql-middleware/playground/app/pages/mutation/mutation.triggerError.graphql",
  },
  {
    "content": "query getError {
  getError
}",
    "filename": "/run/media/dulnan/Storage/development/nuxt-graphql-middleware/playground/app/pages/query/query.getError.graphql",
  },
  {
    "content": "query simulateEndpointDown {
  testFetchOptions {
    headerClient
    headerServer
  }
}",
    "filename": "/run/media/dulnan/Storage/development/nuxt-graphql-middleware/playground/app/pages/query/query.simulateEndpointDown.graphql",
  },
  {
    "content": "mutation testFormSubmit($input: FormSubmissionInput!) {
  submitForm(input: $input)
}",
    "filename": "/run/media/dulnan/Storage/development/nuxt-graphql-middleware/playground/app/pages/test-upload/mutation.testFormSubmit.graphql",
  },
  {
    "content": "mutation testUpload($file: Upload!) {
  uploadFile(file: $file)
}",
    "filename": "/run/media/dulnan/Storage/development/nuxt-graphql-middleware/playground/app/pages/test-upload/mutation.testUpload.graphql",
  },
  {
    "content": "query getSubmissions {
  getSubmissions {
    ...formSubmission
  }
}

fragment formSubmission on FormSubmission {
  id
  firstName
  lastName
  documents {
    name
    file {
      name
      id
      content
    }
  }
}
fragment formSubmission on FormSubmission {
  id
  firstName
  lastName
  documents {
    name
    file {
      name
      id
      content
    }
  }
}",
    "filename": "/run/media/dulnan/Storage/development/nuxt-graphql-middleware/playground/app/pages/test-upload/query.getSubmissions.graphql",
  },
  {
    "content": "query foobar {
  users {
    ...user
  }
}
fragment user on User {
  id
  firstName
  lastName
  email
  description
  dateOfBirth
}",
    "filename": "/run/media/dulnan/Storage/development/nuxt-graphql-middleware/playground/app/pages/test.graphql",
  },
  {
    "content": "mutation addUser($user: UserData!) {
  createUser(user: $user) {
    ...user
  }
}
fragment user on User {
  id
  firstName
  lastName
  email
  description
  dateOfBirth
}",
    "filename": "/run/media/dulnan/Storage/development/nuxt-graphql-middleware/playground/app/pages/user/mutation.addUser.graphql",
  },
  {
    "content": "query userById($id: ID!) {
  userById(id: $id) {
    ...user
  }
}
fragment user on User {
  id
  firstName
  lastName
  email
  description
  dateOfBirth
}",
    "filename": "/run/media/dulnan/Storage/development/nuxt-graphql-middleware/playground/app/pages/user/query.user.graphql",
  },
  {
    "content": "fragment user on User {
  id
  firstName
  lastName
  email
  description
  dateOfBirth
}",
    "filename": "/run/media/dulnan/Storage/development/nuxt-graphql-middleware/playground/app/pages/user/user.fragment.graphql",
  },
  {
    "content": "query users {
  users {
    ...user
  }
}
fragment user on User {
  id
  firstName
  lastName
  email
  description
  dateOfBirth
}",
    "filename": "/run/media/dulnan/Storage/development/nuxt-graphql-middleware/playground/app/pages/userList.graphql",
  },
  {
    "content": "fragment depthOneQuery on Query {
  one: users {
    ...depthOneUser
  }
}
fragment depthOneUser on User {
  firstName
  friends {
    ...depthTwoUser
  }
}
fragment depthTwoUser on User {
  firstName
}
fragment depthTwoUser on User {
  firstName
}",
    "filename": "/run/media/dulnan/Storage/development/nuxt-graphql-middleware/playground/app/test-queries/auto-inline/fragment.depthOne.graphql",
  },
  {
    "content": "fragment depthOneUser on User {
  firstName
  friends {
    ...depthTwoUser
  }
}
fragment depthTwoUser on User {
  firstName
}",
    "filename": "/run/media/dulnan/Storage/development/nuxt-graphql-middleware/playground/app/test-queries/auto-inline/fragment.depthOneUser.graphql",
  },
  {
    "content": "fragment depthTwoUser on User {
  firstName
}",
    "filename": "/run/media/dulnan/Storage/development/nuxt-graphql-middleware/playground/app/test-queries/auto-inline/fragment.depthTwoUser.graphql",
  },
  {
    "content": "query highDepthOne {
  ...depthOneQuery
  one: users {
    ...depthOneUser
  }
}
fragment depthOneQuery on Query {
  one: users {
    ...depthOneUser
  }
}
fragment depthOneUser on User {
  firstName
  friends {
    ...depthTwoUser
  }
}
fragment depthTwoUser on User {
  firstName
}
fragment depthTwoUser on User {
  firstName
}",
    "filename": "/run/media/dulnan/Storage/development/nuxt-graphql-middleware/playground/app/test-queries/auto-inline/query.highDepthFragments.graphql",
  },
  {
    "content": "query foobar {
  field
}",
    "filename": "nuxt.config.ts[0]",
  },
]
`;
